// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can create an annotation on a nested heading 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "attrs": Object {
              "width": 50,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "layoutColumn",
          },
          Object {
            "attrs": Object {
              "width": 50,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "layoutColumn",
          },
        ],
        "type": "layoutSection",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "level": 1,
                    },
                    "content": Array [
                      Object {
                        "marks": Array [
                          Object {
                            "attrs": Object {
                              "annotationType": "inlineComment",
                              "id": "1234",
                            },
                            "type": "annotation",
                          },
                        ],
                        "text": "Big heading inside this table!",
                        "type": "text",
                      },
                    ],
                    "type": "heading",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "panelType": "info",
                    },
                    "content": Array [
                      Object {
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "Hello",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "World",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                        ],
                        "type": "bulletList",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "Hello",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "World",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                        ],
                        "type": "orderedList",
                      },
                    ],
                    "type": "panel",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 547,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "1234",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 577,
  },
}
`;

exports[`Can create an annotation on a nested task inside a table with overlapping marks 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. Vestibulum magna nibh, auctor non auctor id, finibus vitae orci. ",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "localId": "4b895470-4b94-4c9c-84ac-dbebfec31b2a",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "localId": "39da70eb-1e13-4d75-857f-7112943f548d",
              "state": "TODO",
            },
            "content": Array [
              Object {
                "text": "hello, mate",
                "type": "text",
              },
            ],
            "type": "taskItem",
          },
        ],
        "type": "taskList",
      },
      Object {
        "attrs": Object {
          "localId": "b8510754-475d-4ee4-9887-d090024a21be",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "localId": "180d58fe-a7bf-48fb-8d34-3bb743a07a08",
              "state": "DECIDED",
            },
            "content": Array [
              Object {
                "text": "hello, mate",
                "type": "text",
              },
            ],
            "type": "decisionItem",
          },
        ],
        "type": "decisionList",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "localId": "1d944f46-ca2c-4d79-b0f9-0c50945c1d95",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "localId": "ac50aece-412f-4214-b39d-c1f2945ab12a",
                          "state": "TODO",
                        },
                        "content": Array [
                          Object {
                            "marks": Array [
                              Object {
                                "type": "em",
                              },
                              Object {
                                "type": "strong",
                              },
                              Object {
                                "type": "underline",
                              },
                              Object {
                                "attrs": Object {
                                  "annotationType": "inlineComment",
                                  "id": "1234",
                                },
                                "type": "annotation",
                              },
                            ],
                            "text": "bold ",
                            "type": "text",
                          },
                          Object {
                            "marks": Array [
                              Object {
                                "attrs": Object {
                                  "href": "https://product-fabric.atlassian.net/browse/FAB-1520",
                                },
                                "type": "link",
                              },
                              Object {
                                "type": "em",
                              },
                              Object {
                                "type": "strong",
                              },
                              Object {
                                "type": "underline",
                              },
                              Object {
                                "attrs": Object {
                                  "annotationType": "inlineComment",
                                  "id": "1234",
                                },
                                "type": "annotation",
                              },
                            ],
                            "text": "FAB-1520 UI: Poor man's search",
                            "type": "text",
                          },
                        ],
                        "type": "taskItem",
                      },
                    ],
                    "type": "taskList",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
      Object {
        "content": Array [],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 279,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "1234",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 314,
  },
}
`;

exports[`Can create an annotation on nested text inside a layout 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "attrs": Object {
              "width": 50,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Lorem ipsum dolor ",
                    "type": "text",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "attrs": Object {
                          "annotationType": "inlineComment",
                          "id": "1234",
                        },
                        "type": "annotation",
                      },
                    ],
                    "text": "sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "layoutColumn",
          },
          Object {
            "attrs": Object {
              "width": 50,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "marks": Array [
                      Object {
                        "attrs": Object {
                          "annotationType": "inlineComment",
                          "id": "1234",
                        },
                        "type": "annotation",
                      },
                    ],
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "layoutColumn",
          },
        ],
        "type": "layoutSection",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "level": 1,
                    },
                    "content": Array [
                      Object {
                        "text": "Big heading inside this table!",
                        "type": "text",
                      },
                    ],
                    "type": "heading",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "panelType": "info",
                    },
                    "content": Array [
                      Object {
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "Hello",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "World",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                        ],
                        "type": "bulletList",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "Hello",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "World",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                        ],
                        "type": "orderedList",
                      },
                    ],
                    "type": "panel",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 200,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "1234",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 540,
  },
}
`;

exports[`Can create an annotation on nested text inside a list inside a table 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "attrs": Object {
              "width": 50,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "layoutColumn",
          },
          Object {
            "attrs": Object {
              "width": 50,
            },
            "content": Array [
              Object {
                "content": Array [
                  Object {
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. ",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "layoutColumn",
          },
        ],
        "type": "layoutSection",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "level": 1,
                    },
                    "content": Array [
                      Object {
                        "text": "Big heading inside this table!",
                        "type": "text",
                      },
                    ],
                    "type": "heading",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "panelType": "info",
                    },
                    "content": Array [
                      Object {
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "Hello",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "World",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                        ],
                        "type": "bulletList",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "marks": Array [
                                      Object {
                                        "attrs": Object {
                                          "annotationType": "inlineComment",
                                          "id": "1234",
                                        },
                                        "type": "annotation",
                                      },
                                    ],
                                    "text": "Hello",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                          Object {
                            "content": Array [
                              Object {
                                "content": Array [
                                  Object {
                                    "text": "World",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "listItem",
                          },
                        ],
                        "type": "orderedList",
                      },
                    ],
                    "type": "panel",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 606,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "1234",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 611,
  },
}
`;
